# pulse

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
agent/pulse_agent/: config.py  dispatcher.py  enroll.py  http_client.py  interfaces.py  main.py  poll.py  scan.py  state.py  token_store.py
agent/pulse_agent/pinger/: __init__.py  icmp_raw.py  icmp_subprocess.py  scheduler.py
agent/pulse_agent/platform/: detect.py
agent/pulse_agent/probes/: dhcp_renew.py  dns.py  http_check.py  iperf3_client.py  iperf3_server.py  self_upgrade.py  tcp_port.py
agent/pulse_agent/tests/: test_pinger_subprocess.py  test_probes.py  test_scheduler.py  test_token_store.py
docker/: agent.Dockerfile  docker-compose.smoketest.yml  docker-compose.yml  server-entrypoint.sh  server.Dockerfile
scripts/: dev_run_server.sh  install-agent.sh  smoke.py  smoke_local.py
server/pulse_server/: config.py  logging.py  main.py
server/pulse_server/db/: engine.py  models.py  session.py
server/pulse_server/repo/: command_repo.py  meta_repo.py  ping_repo.py
server/pulse_server/routers/: access_points.py  agents.py  airspace.py  alerts.py  boosts.py  debug.py  enrollment.py  events.py  groups.py  health.py  passive_targets.py  peers.py  tags.py  telemetry.py  tests.py  tools.py  trends.py  webhooks.py
server/pulse_server/scheduler/: jobs.py
shared/pulse_shared/: __init__.py  contracts.py  enums.py  version.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  (+3 more)
(+74 files in other folders)
